Added board function Class for road, wall and water.

--- a/Tanks/Static/Css/boardStyle.css
+++ b/Tanks/Static/Css/boardStyle.css
@@ -1,2 +1,23 @@
 ﻿body {
 }
+
+
+
+.road {
+    background-color: gray;
+    height: 60px;
+    width: 60px;
+}
+
+.wall {
+    height: 60px;
+    width: 60px;
+    background: repeating-linear-gradient(black, gray 10%, brown 20%);
+}
+
+.water {
+    height: 60px;
+    width: 60px;
+    background: linear-gradient(blue, aqua, blue)
+}
+
