Fortsatt arbete på kontrollern

--- a/Tanks/Static/Css/controlStyle.css
+++ b/Tanks/Static/Css/controlStyle.css
@@ -1,18 +1,18 @@
 ﻿body {
 }
 
-.moveLeft{
+.moveLEFT{
 
 }
 
-.moveRight{
+.moveRIGHT{
 
 }
 
-.moveUp{
+.moveUP{
 
 }
 
-.moveDown{
+.moveDOWN{
 
 }
