Fixar buggar i kontrollern

--- a/Tanks/Static/Css/boardStyle.css
+++ b/Tanks/Static/Css/boardStyle.css
@@ -16,6 +16,7 @@
 }
 
 .bush {
+    background-image: url('../img/Ground.png');
     background-image: url('../img/Bush.png');
 }
 
@@ -39,6 +40,15 @@
     position:absolute;
 }
 
-.tank{
-    position:absolute;
+.tank {
+    position: absolute;
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: left 2s, top 2s ;
+    transition-timing-function: linear;
+}
+
+.smoothRotation {
+    transition: left 2s, top 2s, transform 1s;
+    transition-timing-function: linear;
 }
